[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type=["cdylib"]

[dependencies]
wasm-bindgen="0.2.80"
getrandom={ version = "0.2.6", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand="0.8.5"